--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,5 @@
 {% extends "layout.html" %}
 
 {% block main %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Symbol</th>
-                <th scope="col">Name</th>
-                <th scope="col">Shares</th>
-                <th scope="col">Price</th>
-                <th scope="col">TOTAL</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- TODO: Loop through the database entries to display them in this table -->
-            {% block body %}
-                {% for share in shares %}
-                    <tr>
-                        <td>{{ share.symbol }}</td>
-                        <td>{{ share.name }}</td>
-                        <td>{{ share.shares }}</td>
-                        <td>{{ share.value | usd }}</td>
-                        <td>{{ share.total_value | usd }}</td>
-                    </tr>
-                {% endfor %}
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>{{ total_depot | usd }}</td>
-                </tr>
-            {% endblock %}
-        </tbody>
-    </table>
-    Cash available: {{ cash | usd }}
+    Hello, world
 {% endblock %}
