--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 
+{% block header %}
+    <!-- Use Chart.JS for Charts -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock %}
+
 {% block title %}
     COVID Track
 {% endblock %}
@@ -8,14 +13,69 @@
     <h2>Track Corona Data for your destinations</h2>
 
     <form action="/" method="post">
-        <input autocomplete="off" autofocus class="form-control" name="countries" placeholder="Countries" type="text" required>
+        <!-- <input autocomplete="off" autofocus class="form-control" name="countries" placeholder="Countries" type="text" required> -->
+        <select name="countries">
+            <option disabled selected value="">Country</option>
+            {% for c in countries %}
+                <option value="{{ c }}">{{ c }}</option>"
+            {% endfor %}
+        </select>
         <button class="btn btn-primary" type="submit">Search</button>
     </form>
 
     <p>Data shown for {{ country }}.</p>
-    <p>Cases Total:</p>
-    <p>Tests Total:</p>
-    <p>Deaths Total:</p>
+
+    <!-- Show country specific stats -->
+    <p>Cases Total: {{ todays_numbers[0] }}</p>
+    <p>Tests Total: {{ todays_numbers[2] }}</p>
+    <p>Deaths Total: {{ todays_numbers[1] }}</p>
     <p>Trend:</p>
+
+    <!-- show diagram using Chart.JS -->
+    <canvas id="lineChart" width="900" height="400"></canvas>
+    <script>
+        var ctx = document.getElementById("lineChart").getContext("2d");
+        var lineChart = new Chart(ctx, {
+            type: "line",
+            data: {
+                labels: {{ labels | safe }},
+                datasets: [
+                    {
+                        labels: "Data points",
+                        data: {{ values | safe }},
+                        fill: false,
+                        borderColor: "rgb(75, 192, 192)",
+                        lineTension: 0.1
+                    }
+                ]
+            },
+            options: {
+                responsive: false,
+                scales: {
+                    x: [{
+                        ticks: {
+                            autoSkip: true,
+                            maxTicksLimit: 10
+                        }
+                    }],
+                    y: {
+                        title: {
+                            display: true,
+                            text: "# of cases"
+                        }
+                    }
+                },
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'COV-19 Cases in {{ country }}'
+                    },
+                    legend: {
+                        display: false
+                    }
+                }
+            }
+        });
+    </script>
 
 {% endblock %}
