--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/stats">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/statistics">Statistics</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
