data privacy and imprint in place

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,26 +10,63 @@
 {% endblock %}
 
 {% block main %}
-    <h2>Track Corona Data for your destinations</h2>
+    <h2>Track Corona Data for your destinations</h2><br>
 
-    <form action="/" method="post">
-        <!-- <input autocomplete="off" autofocus class="form-control" name="countries" placeholder="Countries" type="text" required> -->
-        <select name="countries">
-            <option disabled selected value="">Country</option>
-            {% for c in countries %}
-                <option value="{{ c }}">{{ c }}</option>"
-            {% endfor %}
-        </select>
-        <button class="btn btn-primary" type="submit">Search</button>
-    </form>
+    <div>
+        <form action="/" method="post">
+            <!-- <input autocomplete="off" autofocus class="form-control" name="countries" placeholder="Countries" type="text" required> -->
+            <select name="countries">
+                <option disabled selected value="">Country</option>
+                {% for c in countries %}
+                    <option value="{{ c }}">{{ c }}</option>"
+                {% endfor %}
+            </select>
+            <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+    </div>
 
-    <p>Data shown for {{ country }}.</p>
+    <div>
+        <div>
+            <br><h2>{{ country }}</h2>
+            Population: {{ todays_numbers[6] }}<br>
+            Updated: {{ todays_numbers[8] }}
+        </div>
 
-    <!-- Show country specific stats -->
-    <p>Cases Total: <b>{{ td_cases }}</b></p>
-    <p>Tests Total: <b>{{ td_tests }}</b></p>
-    <p>Deaths Total: <b>{{ td_deaths }}</b></p>
-    <p>Trend:</p>
+        <!-- Show country specific stats -->
+        <p><h4>Cases</h4></p>
+        <p>Total: <b>{{ todays_numbers[0] }}</b></p>
+        <div class=container-xl>
+            <div class="cases">
+                <div class="newCases column">
+                    <b>New:</b><br>
+                    {{ todays_numbers[7] }}
+                </div>
+                <div class="activeCases column">
+                    <b>Active:</b><br>
+                    {{ todays_numbers[3] }}
+                </div>
+                <div class="criticalCases column">
+                    <b>Critical:</b><br>
+                    {{ todays_numbers[4] }}
+                </div>
+                <div class="recoveredCases column">
+                    <b>Recovered:</b><br>
+                    {{ todays_numbers[5] }}
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <h4>Tests</h4>
+            Total: <b>{{ todays_numbers[2] }}</b>
+        </div>
+
+        <div>
+            <h4>Deaths</h4>
+            Total: <b>{{ todays_numbers[1] }}</b>
+            <br>
+        </div>
+    </div>
 
     <!-- show diagram using Chart.JS -->
     <canvas id="lineChart" width="900" height="400"></canvas>
@@ -89,6 +126,7 @@
                 plugins: {
                     title: {
                         display: true,
+                        position: 'bottom',
                         text: 'COVID-19 statistics for {{ country }}'
                     },
                     legend: {
