--- a/static/styles.css
+++ b/static/styles.css
@@ -1,27 +1,3 @@
-nav .navbar-brand
-{
-    /* size for brand */
-    font-size: xx-large;
-}
-
-/* Colors for brand */
-nav .navbar-brand .blue
-{
-    color: #537fbe;
-}
-nav .navbar-brand .red
-{
-    color: #ea433b;
-}
-nav .navbar-brand .yellow
-{
-    color: #f5b82e;
-}
-nav .navbar-brand .green
-{
-    color: #2e944b;
-}
-
 main .form-control
 {
     /* Center form controls */
@@ -44,4 +20,30 @@ main img
 {
     /* Constrain images on small screens */
     max-width: 100%;
+}
+
+div {
+    margin-bottom: 15px;
+}
+
+.container-xl > * + * {
+    padding-top: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.cases {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    .cases {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 }
