--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,28 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
+        <style type="text/css">
+            .mobileShow {display: none;}
+          
+            /* Smartphone Portrait and Landscape */
+            @media only screen
+              and (min-device-width : 320px)
+              and (max-device-width : 480px){ 
+                .mobileShow {display: inline;}
+            }
+        </style>
+
+        <style type="text/css">
+            .mobileHide { display: inline; }
+        
+            /* Smartphone Portrait and Landscape */
+            @media only screen
+            and (min-device-width : 320px)
+            and (max-device-width : 480px){
+            .mobileHide { display: none;}
+            }
+        </style>
+
         {% block header %}{% endblock %}
 
         <title>CS50: {% block title %}{% endblock %}</title>
@@ -35,8 +57,8 @@
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/statistics">Statistics</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/"><b>Home</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/statistics"><b>Statistics</b></a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
@@ -64,6 +86,9 @@
 
         <footer class="small text-center text-muted">
             COVID-19 data is coming from Google and major government sites. View <a href="https://rapidapi.com/api-sports/api/covid-193/details">COVID-19 API</a>.
+            <div>
+                <a href="legal-notice">Legal Notice</a>  ·  <a href="/data-privacy">Data Privacy</a>
+            </div>
         </footer>
 
     </body>
