--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
+        <!-- https://favicon.io/ -->
         <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
@@ -18,28 +18,6 @@
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-        <style type="text/css">
-            .mobileShow {display: none;}
-          
-            /* Smartphone Portrait and Landscape */
-            @media only screen
-              and (min-device-width : 320px)
-              and (max-device-width : 480px){ 
-                .mobileShow {display: inline;}
-            }
-        </style>
-
-        <style type="text/css">
-            .mobileHide { display: inline; }
-        
-            /* Smartphone Portrait and Landscape */
-            @media only screen
-            and (min-device-width : 320px)
-            and (max-device-width : 480px){
-            .mobileHide { display: none;}
-            }
-        </style>
 
         {% block header %}{% endblock %}
 
@@ -49,15 +27,15 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light border">
+        <nav class="navbar navbar-expand-md navbar-light navbar-custom border">
             <img class="navbar-brand" src="static/logo.png" height="50" alt="logo" href="/">
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/"><b>Home</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="/statistics"><b>Statistics</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/statistics">Statistics</a></li>
                     </ul>
             </div>
         </nav>
