--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block main %}
-    <img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png" title="{{ top }}">
-{% endblock %}
+    <img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.ibb.co/LSmGFzc/pexels-karolina-grabowska-4386600.jpg" title="{{ top }}">
+
+    {% endblock %}
